--- a/common/vulinbox/route_safe.html
+++ b/common/vulinbox/route_safe.html
@@ -47,6 +47,13 @@
         <li><a target="_blank" href="/user/name?name=admin">不安全的 SQL 注入(NAME)</a></li>
     </ol>
 
+    <h1>XSS 注入 Case</h1>
+    <ol>
+        <li><a target="_blank" href="/xss/safe?name=admin">安全的实体转义</a></li>
+        <li><a target="_blank" href="/xss/echo?name=admin">无安全措施直接拼接导致XSS注入(NAME)</a></li>
+        <li><a target="_blank" href="/xss/replace/nocase?name=admin">不安全过滤导致XSS注入(NAME)</a></li>
+    </ol>
+
     <h1>SSRF</h1>
     <ol>
         <li><a target="_blank" href='/ssrf-in-get?url=http://www.baidu.com/'>SSRF GET 中 URL 参数情况</a></li>
@@ -56,6 +63,12 @@
         <li><a target="_blank" href='/ssrf-json-in-post-param'>SSRF POST 中有个 JSON 参数，其中 REF 为 URL 的情况</a></li>
         <li><a target="_blank" href='/ssrf-json-in-get?json={"abc":%20123,%20"ref":%20"http://www.baidu.com"}'>SSRF GET 中 JSON 参数情况</a></li>
 
+    </ol>
+
+    <h1>Shiro默认key</h1>
+    <ol>
+        <li><a target="_blank" href="/shiro/cbc">shiro低版本默认key(< 1.4.2)</a></li>
+        <li><a target="_blank" href="/shiro/gcm">shiro低版本默认key(>= 1.4.2)</a></li>
     </ol>
 
     <h1>表达式注入</h1>
