--- a/common/vulinbox/html/auto_route.html
+++ b/common/vulinbox/html/auto_route.html
@@ -18,7 +18,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">Vulinbox - Agent</a>
+            <a class="navbar-brand" href="/common/vulinbox/static">Vulinbox - Agent</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
