--- a/common/vulinbox/html/vul_upload_result.html
+++ b/common/vulinbox/html/vul_upload_result.html
@@ -12,7 +12,7 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <div class="container">
-            <a class="navbar-brand" href="/">Vulinbox - Agent</a>
+            <a class="navbar-brand" href="/common/vulinbox/static">Vulinbox - Agent</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                     aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -29,20 +29,16 @@
 </header>
 
 <!-- Your page content goes here -->
-<div class="container mt-5">
-    <div class="container py-5">
-        <h1 class="mb-5">File Upload </h1>
-        <div class="alert alert-info">
-            to：{{ .action }}
-        </div>
-        <form action="{{ .action }}" method="post" enctype="multipart/form-data">
-            <div class="mb-3">
-                <label for="formFile" class="form-label">Choose file</label>
-                <input class="form-control" type="file" id="formFile" name="filename" required>
-            </div>
-            <button type="submit" class="btn btn-primary">Upload</button>
-        </form>
+<div class="container py-5">
+    <h1 class="mb-5">Upload Results</h1>
+    <div class="alert alert-success" role="alert">
+        File uploaded MetaInfo {{ .extrainfo }}
     </div>
+    <ul class="list-group mb-3">
+        <li class="list-group-item">File Name: <strong>{{ .originName }} -> {{ .handledExt }}</strong></li>
+        <li class="list-group-item">File Size: <strong>{{ .filesize }}</strong></li>
+        <li class="list-group-item">Saved At: <strong>{{ .path }}</strong></li>
+    </ul>
 </div>
 
 <!-- 引入 Bootstrap JavaScript -->
